# guiqtc-

./: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  GuiSensor.pro  GuiSensor.sln  GuiSensor.vcxproj  GuiSensor.vcxproj.filters  GuiSensor_id_ID.ts  GuiSensor_qmlimportscan.vcxproj  GuiSensor_qmlimportscan.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build-release.rar  cmake_install.cmake  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  tasks.json
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
.qt/deploy_qml_imports/: GuiSensor-Debug.cmake
build-release/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GuiSensor.sln  GuiSensor.vcxproj  GuiSensor.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-release/GuiSensor.dir/Release/: GuiSensor.exe.recipe
build-release/GuiSensor.dir/Release/GuiSensor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-release/GuiSensor_autogen/: mocs_compilation_Release.cpp
build-release/GuiSensor_autogen/include_Release/: ui_CombinedGraphs.h  ui_IndividualGraphs.h  ui_MainWindow.h  ui_SensorCards.h
build-release/GuiSensor_autogen/include_Release/7HEHEGDA3T/: moc_SerialHandler.cpp  moc_SerialHandler.cpp.d
build-release/GuiSensor_autogen/include_Release/DDFK5RJJWQ/: moc_CombinedGraphs.cpp  moc_CombinedGraphs.cpp.d
build-release/GuiSensor_autogen/include_Release/DWXXTW4CE3/: moc_SensorCards.cpp  moc_SensorCards.cpp.d
build-release/GuiSensor_autogen/include_Release/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_qcustomplot.cpp  moc_qcustomplot.cpp.d
build-release/GuiSensor_autogen/include_Release/YS2IM53ZQQ/: moc_IndividualGraphs.cpp  moc_IndividualGraphs.cpp.d
build-release/Release/: apps.iss
build-release/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-release/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build-release/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-release/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
config/: config.xml
release/translations/: qt_de.qm
resources/: maps.html  maps.qml
utils/: SerialHandler.cpp  SerialHandler.h
widgets/CombinedGraph/: CombinedGraphs.cpp  CombinedGraphs.h  CombinedGraphs.ui
widgets/IndividualGraphs/: IndividualGraphs.cpp  IndividualGraphs.h  IndividualGraphs.ui
widgets/Maps/: maps.cpp  maps.h  maps.ui
widgets/SensorCards/: SensorCards.cpp  SensorCards.h  SensorCards.ui
